<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#0066FF">
    
    <!-- Linear Layout for the input fields -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_trip_name" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination" />
        <EditText
            android:id="@+id/inputDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" />

        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date" />
        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" 
            >
       </EditText>
       
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date">            
        </TextView>
        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" 
         >
        </EditText>

        "
    </LinearLayout>
	
    <!-- Linear Layout for the Buttons -->
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:layout_weight="1">  
	    
        <!-- Linear Layout for the Cancel and Save Buttons -->
        <LinearLayout
	    		android:layout_width="match_parent"
	    		android:layout_height="match_parent"
	    		android:layout_weight="1"
	    		android:orientation="horizontal">
	    		
	    	    <Button
	    	        android:id="@+id/btnCancelNT"
	    	        android:layout_width="match_parent"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="1"
	    	        android:layout_margin="4dp"
	    	        android:text="@string/NT_cancel">      
	    	        
	    	    </Button>
	    	    <Button
	    	        android:id="@+id/btnSaveNT"
	    	        android:layout_width="match_parent"
	    	        android:layout_height="match_parent"
	    	        android:layout_weight="1"
	    	        android:layout_margin="4dp"
	    	        android:text="@string/NT_save">"
	    	        
	    	    </Button>
            
            
        </LinearLayout>
        
        <!-- Linear Layout for Packing List and To Do List Buttons -->
        <LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_weight="1"
    		android:orientation="horizontal">
    		
    	    <Button
    	        android:id="@+id/btnPackingListNT"
    	        android:layout_width="match_parent"
    	        android:layout_height="match_parent"
    	        android:layout_weight="1"
    	        android:layout_margin="4dp"
    	        android:text="@string/NT_packing_list">      
    	        
    	    </Button>
    	    <Button
    	        android:id="@+id/btnToDoListNT"
    	        android:layout_width="match_parent"
    	        android:layout_height="match_parent"
    	        android:layout_weight="1"
    	        android:layout_margin="4dp"
    	        android:text="@string/NT_to_do_list">"
    	        
    	    </Button>
           
           
       	</LinearLayout>
        

	</LinearLayout>
    
    

</LinearLayout>
